<?xml version="1.0" encoding="utf-8"?>


<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="mViewModel"
            type="com.gettydone.app.ui.main.MainViewModel" />

        <variable
            name="mActivity"
            type="com.gettydone.app.MainActivity" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment"
        >






        <LinearLayout
            android:id="@+id/windowBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?colorPrimaryVariant"
            android:clickable="false"
            android:longClickable="false"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--scrollSize: 250-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center"
                >

                <Button
                    android:id="@+id/finishRecordButton"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/outline_add_chart_black_48"

                    />

                <LinearLayout
                    android:layout_width="230sp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >


                    <TextView
                        android:id="@+id/timeTextMain"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                       android:fontFamily="sans-serif-black"
                        android:text="00:00:00"
                        android:textColor="?colorControlHighlight"
                        android:textAlignment="center"
                        android:textSize="36sp"
                        />

                    <TextView
                        android:id="@+id/timeTextSecondary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:text="00:00:00"
                        android:textColor="@color/light_blue_200"
                        />



                </LinearLayout>


                <EditText
                    android:id="@+id/repeatTimer"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:cursorVisible="false"
                    android:drawableTop="@drawable/outline_autorenew_24"
                    android:drawableTint="?colorPrimary"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="16sp"

                    />


            </LinearLayout>




            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ScrollView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/scrollSize"
                android:layout_marginBottom="0dp"
                android:background="?colorSecondaryVariant"
                android:clickable="false"
                android:longClickable="false"
                android:overScrollMode="always"
                tools:listitem="@layout/entry">


            </androidx.recyclerview.widget.RecyclerView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/upperButtonPanel"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <Button
                    android:id="@+id/leafButtonLeft"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/timerExecuteBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <Button
                    android:id="@+id/timerExecuteBtn"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/outline_play_circle_filled_black_48"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/leafButtonRight"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/timerExecuteBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout

                android:id="@+id/buttonPanel"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"


                >


                <Button
                    android:id="@+id/editMoveBtn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/ic_editcustom"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/touchExpander"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/touchExpander"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="?colorControlHighlight"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/addDeleteBtn"
                    app:layout_constraintStart_toEndOf="@+id/editMoveBtn"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/addDeleteBtn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/outline_add_circle_outline_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/touchExpander"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontalCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
            />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="450dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="240dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>
